# NeuralNetwork

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  NeuralNetwork  NeuralNetwork.files  NeuralNetwork.includes  README.md
Pandora/: CMakeCache.txt  CMakeLists.txt  Makefile  Pandora.files  Pandora.includes  cmake_install.cmake
Pandora/include/Pandora/: config.h  pandora.h
Pandora/include/Pandora/util/: aligned_allocator.h  coloredstream.h  error.h  index3d.h  math_function.h  product.h  random.h  tensor.h  type.h  util.h  weight_init.h
Pandora/src/: main.cpp
Pandora/test/: testPandora
include/: ActivationFunction.hpp  ArtificialNeuralNetwork.hpp  ConvolutionalNeuralNetwork.hpp  GradientDescent.hpp  Layer.hpp  LossFunctions.hpp  NeuralNetwork.hpp  PrimitiveLayer.hpp  Type.hpp
src/: main.cpp
